# echoserver

./: .gitignore  EchoServer.sln  LICENSE  README.md  design_document.uml  readme.txt  sample_test_fakeobject.cpp
EchoClient/: EchoClient.cpp  EchoClient.vcxproj  EchoClient.vcxproj.filters  EchoClient.vcxproj.xml  packet.h  packethandler.h
EchoServer/: EchoServer.cpp  EchoServer.vcxproj  EchoServer.vcxproj.filters  EchoServer.vcxproj.xml  devfile.yaml  linux_build_issues.md  packet.h  packethandler.h  server.cpp  server.h  session.cpp  session.h  session_fixed.cpp  sessionmanager.cpp  sessionmanager.h  updated_linux_build_issues.md
EchoServer-CMake/: CMakeLists.txt  EchoServer-CMake.vcxproj  EchoServer.cpp  main.cpp_  packethandler.cpp  packethandler.h  server.h  session.cpp  session.h  sessionmanager.h
EchoServer/linux/: .gitignore  CMakeLists.txt  README.md  build.sh
EchoServerTest/: EchoServerTest.vcxproj  EchoServerTest.vcxproj.filters  test.cpp
EchoServerTest_2022/: EchoServerTest_2022.vcxproj  test.cpp
